; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_gcse.c_alloc_pre_mem.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_gcse.c_alloc_pre_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@transp = common dso_local global i8* null, align 8
@comp = common dso_local global i8* null, align 8
@antloc = common dso_local global i8* null, align 8
@pre_optimal = common dso_local global i32* null, align 8
@pre_redundant = common dso_local global i32* null, align 8
@pre_insert_map = common dso_local global i32* null, align 8
@pre_delete_map = common dso_local global i32* null, align 8
@ae_kill = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @alloc_pre_mem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @alloc_pre_mem(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i8* @sbitmap_vector_alloc(i32 %5, i32 %6)
  store i8* %7, i8** @transp, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i8* @sbitmap_vector_alloc(i32 %8, i32 %9)
  store i8* %10, i8** @comp, align 8
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i8* @sbitmap_vector_alloc(i32 %11, i32 %12)
  store i8* %13, i8** @antloc, align 8
  store i32* null, i32** @pre_optimal, align 8
  store i32* null, i32** @pre_redundant, align 8
  store i32* null, i32** @pre_insert_map, align 8
  store i32* null, i32** @pre_delete_map, align 8
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i8* @sbitmap_vector_alloc(i32 %14, i32 %15)
  store i8* %16, i8** @ae_kill, align 8
  ret void
}

declare dso_local i8* @sbitmap_vector_alloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
